# calico-solver

./: .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  README.md  cats_only_solver.py  config_models.py  example_configurations.json  main.py  parallel_optimizer.py  pip.conf  pyproject.toml  requirements-dev.in  requirements.in  test_edge_neighbor_pairs.py  test_neighbor_sets.py
core/enums/: __init__.py  cat_scoring.py  color.py  design_goal.py  edge_tile_settings.py  pattern.py
core/models/: __init__.py  cat_scoring_tile.py  design_goal_tile.py  patch_tile.py  quilt_board.py
data/: almond_patches.json  callie_patches.json  cira_patches.json  coconut_patches.json  gwenivere_patches.json  leo_patches.json  millie_patches.json  rumi_patches.json  tecolote_patches.json  tibbit_patches.json
docs/: CALICO_SCORING.md  CAT_SCORING_TILES.md  DESIGN_GOAL_TILES.md
scripts/: setup_venv.sh
solvers/: all_solver.py  button_solver.py  buttons_optimizer.py  buttons_solver.py  cats_modeler.py  combined_solver.py  design_goals_solver.py  full_design_goals_solver.py  new_button_solver.py  objective_design_goals_solver.py  restructured_design_goals_solver.py
